--- a/public/index.html
+++ b/public/index.html
@@ -33,12 +33,20 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Raydium Labs</title>
+
+    <meta name="description" content="We are a software development agency based out of Mumbai. We are a group of young and agile engineers building designs, websites and mobile applications. We also help businesses with back office tools like ERP dashboard, online payment gateways and much more. Join us to take your businesses to the next level!">
+    <meta name="og:title" property="og:title" content="Raydium labs: Digitize your business">
+    <meta property="og:image" content="https://www.raydiumlabs.in/raydium-labs-banner.png"/>
+    <meta property="og:image:width" content="1200"/>
+    <meta property="og:image:height" content="630"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 
     <div id="root"></div>
     <!--
