banner image size increased

--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,10 @@
 
     <meta name="description" content="We are a software development agency based out of Mumbai. We are a group of young and agile engineers building designs, websites and mobile applications. We also help businesses with back office tools like ERP dashboard, online payment gateways and much more. Join us to take your businesses to the next level!">
     <meta name="og:title" property="og:title" content="Raydium labs: Digitize your business">
+    <meta name="og:description" property="og:description" content="We are a software development agency based out of Mumbai. We are a group of young and agile engineers building designs, websites and mobile applications. We also help businesses with back office tools like ERP dashboard, online payment gateways and much more. Join us to take your businesses to the next level!">
     <meta property="og:image" content="https://www.raydiumlabs.in/raydium-labs-banner.png"/>
-    <meta property="og:image:width" content="1200"/>
-    <meta property="og:image:height" content="630"/>
+    <meta property="og:image:width" content="3600"/>
+    <meta property="og:image:height" content="2100"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
