og type updated

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     <meta property="og:image" itemprop="image" content="https://www.raydiumlabs.in/raydium-labs-banner-compressed.png"/>
     <meta property="og:image:width" content="1792"/>
     <meta property="og:image:height" content="1024"/>
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="article" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
